sohontLog sheet set up
sohontLog sheet set up

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -36,9 +36,9 @@
 		<div class="crewTop">
 			<!--ID -->
 			<div class="crewID">
-				<div class="alias">Alias:</div>
+				<div class="topLineText alias">Alias:</div>
 				<div class="aliasName"><input type="text" name="attr_name" class="full aspect" /></div>
-				<h1 class="player">Player:</h1>
+				<div class="topLineText player">Player:</div>
 				<div class="playerName"><input type="text" name="attr_nameplayer" class="full aspect" /></div>
 			</div>
 			<!--Aspects-->
@@ -1366,7 +1366,7 @@
 	<div class="shipSheetGrid">
 		<!--Ship Aspects-->
 		<div class="shipAspects">
-			<div class="designation">Designation:</div>
+			<div class="topLineText designation">Designation:</div>
 			<div class="designationPrefix"><input type="text" name="attr_designationPrefix" class="full" /></div>
 			<div class="designationName"><input type="text" name="attr_name" class="full" /></div>
 			<div class="patron">Patron:</div>
@@ -3669,7 +3669,7 @@
 			<div class="letterOfMarque">
 				<div class="letterOfMarqueTitle">Letter of Marque</div>
 				<div class="letterOfMarqueGreeting">Attention: Local Port Authority,</div>
-				<div class="letterOfMarqueBoxPlace"><textarea class="letter" name="attr_statementContract"></textarea></div>
+				<div class="letterOfMarqueBoxPlace"><textarea class="letterOfMarqueBody" name="attr_statementContract"></textarea></div>
 				<div class="letterOfMarquePatron"><input type="text" class="full" name="attr_patronCommissionaire" /> </div>
 				<div class="letterOfMarquePatronTitle">Patron Commissionaire</div>
 			</div>
@@ -3692,25 +3692,25 @@
 
 <div class="sheetType sophontSheet">
 	<div class="sophontSheetGrid">
-		<div class="alias">Alias:</div>
-		<div class="aliasName"><input type="text" name="attr_name" class="full aspect" /></div>
-		<div class="">Pronouns:</div>
-		<div class=""><input type="text" name="attr_GenderIndentity" class="full aspect" /></div>
-		<div class="">Concept:</div>
-		<div class=""><input type="text" name="attr_concept" class="full aspect" /></div>
-		<div class="">Description:</div>
-		<div class=""><input type="text" name="attr_description" class="full aspect" /></div>
-		<div class="">Behaviour:</div>
-		<div class=""><input type="text" name="attr_behaviour" class="full aspect" /></div>
-		<div class="">Agenda:</div>
-		<div class=""><input type="text" name="attr_agenda" class="full aspect" /></div>
-		<div class="">Faction:</div>
-		<div class=""><input type="text" name="attr_faction" class="full aspect" /></div>
-		<div class="">Languages:</div>
-		<div class=""><input type="text" name="attr_langages" class="full aspect" /></div>
-		<div class="">Significance:</div>
-		<div class="">
-			<select name="attr_significance" class="full aspect">
+		<div class="topLineText">Alias:</div>
+		<div class="aliasThreatName"><input type="text" name="attr_name" class="threatTextBox" /></div>
+		<div class="topLineText pronounThreat">Pronouns:</div>
+		<div class="pronounThreatName"><input type="text" name="attr_GenderIndentity" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnA">Concept:</div>
+		<div class="sophontTextColumnFull"><input type="text" name="attr_concept" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnA">Description:</div>
+		<div class="sophontTextColumnFull"><input type="text" name="attr_description" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnA">Behaviour:</div>
+		<div class="sophontTextColumnFull"><input type="text" name="attr_behaviour" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnA">Agenda:</div>
+		<div class="sophontTextColumnFull"><input type="text" name="attr_agenda" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnA">Faction:</div>
+		<div class="sophontTextColumnA"><input type="text" name="attr_faction" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnB">Languages:</div>
+		<div class="sophontTextColumnB"><input type="text" name="attr_langages" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnA">Significance:</div>
+		<div class="sophontTextColumnA">
+			<select name="attr_significance" class="threatTextBox">
 				<option></option>
 				<option>Untrained</option>
 				<option>Regular</option>
@@ -3718,9 +3718,9 @@
 				<option>Boss</option>
 			</select>
 		</div>
-		<div class="">Diffiuclty:</div>
-		<div class="">
-			<select name="attr_difficulty" class="full aspect">
+		<div class="sophontAspectColumnB">Diffiuclty:</div>
+		<div class="sophontTextColumnB">
+			<select name="attr_difficulty" class="threatTextBox">
 				<option></option>
 				<option>Ordinary(2)</option>
 				<option>Regular(3)</option>
@@ -3728,9 +3728,9 @@
 				<option>Ambitious(5)</option>
 			</select>
 		</div>
-		<div class="">Tech Level:</div>
-		<div class="">
-			<select name="attr_techLevel" class="full aspect">
+		<div class="sophontAspectColumnA">Tech Level:</div>
+		<div class="sophontTextColumnA">
+			<select name="attr_techLevel" class="threatTextBox">
 				<option></option>
 				<option>Primitive</option>
 				<option>Machine</option>
@@ -3740,18 +3740,18 @@
 				<option>Core</option>
 			</select>
 		</div>
-		<div class="">Damage:</div>
-		<div class="">
-			<select name="attr_damage" class="full aspect">
+		<div class="sophontAspectColumnB">Damage:</div>
+		<div class="sophontTextColumnB">
+			<select name="attr_damage" class="threatTextBox">
 				<option></option>
 				<option>Unarmed[0]</option>
 				<option>Archaic[1]</option>
 				<option>Common[2]</option>
 			</select>
 		</div>
-		<div class="">Gear:</div>
-		<div class="">
-			<select name="attr_gear" class="full aspect">
+		<div class="sophontAspectColumnA">Gear:</div>
+		<div class="sophontTextColumnA">
+			<select name="attr_gear" class="threatTextBox">
 				<option></option>
 				<option>Resident[0]</option>
 				<option>Secure[1]</option>
@@ -3761,18 +3761,18 @@
 				<option>Space marine[5]</option>
 			</select>
 		</div>
-		<div class="">Species:</div>
-		<div class=""><input type="text" name="attr_species" class="full aspect" /></div>
-		<div class="">Class:</div>
-		<div class=""><input type="text" name="attr_class" class="full aspect" /></div>
-		<div class="">Augments:</div>
-		<div class=""><textarea name="attr_augments" class="full letter"></textarea></div>
-		<div class="">Archetype:</div>
-		<div class=""><input type="text" name="attr_archetype" class="full aspect" /></div>
-		<div class="">Tags:</div>
-		<div class=""><textarea name="attr_tags" class="full letter"></textarea></div>
-		<div class="">Notes:</div>
-		<div class=""><input type="text" name="attr_notes" class="full aspect" /></div>
+		<div class="sophontAspectColumnB">Species:</div>
+		<div class="sophontTextColumnB"><input type="text" name="attr_species" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnA">Class:</div>
+		<div class="sophontTextColumnA"><input type="text" name="attr_class" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnB">Augments:</div>
+		<div class="sophontTextColumnB"><textarea name="attr_augments" class="threatTextBox"></textarea></div>
+		<div class="sophontAspectColumnA">Archetype:</div>
+		<div class="sophontTextColumnA"><input type="text" name="attr_archetype" class="threatTextBox" /></div>
+		<div class="sophontAspectColumnA">Tags:</div>
+		<div class="sophontTextColumnA"><textarea name="attr_tags" class="threatTextBox"></textarea></div>
+		<div class="sophontAspectColumnA">Notes:</div>
+		<div class="sophontTextColumnFull"><input type="text" name="attr_notes" class="threatTextBox" /></div>
 		<!--Condition Slots-->
 		<div class="">
 			<div class="conditionsTitle">Conditions Slots</div>
