Removed Lockpick Skill.

--- a/Fallout-Vaults-and-Deathclaws/Fallout-VnV.html
+++ b/Fallout-Vaults-and-Deathclaws/Fallout-VnV.html
@@ -439,7 +439,7 @@
             <input type="number" class="sheet-number" name="attr_gambling" value="@{mod-gambling} + @{base-gambling} + 20*@{tagskill16} + @{temp-gambling}" disabled="true"/>
             <input type="number" class="sheet-number"name="attr_temp-gambling" value="0" />
             <input type="number" class="sheet-number"name="attr_mod-gambling" value="0" />
-            <input type="number" class="sheet-number" name="attr_base-gambling" value="5 + @{luck} + @{luck}" disabled="true" />
+            <input type="number" class="sheet-number" name="attr_base-gambling" value="5 + @{luck}" disabled="true" />
             <input type="text" class="sheet-number_skill" name="attr_basetext-gambling" value="5 + LK" readonly />
         </div>
         <div>
@@ -481,16 +481,6 @@
             <input type="number" class="sheet-number"name="attr_mod-investigation" value="0" />
             <input type="number" class="sheet-number" name="attr_base-investigation" value="@{perception} + @{charisma} + @{intelligence} + @{luck}" disabled="true" />
             <input type="text" class="sheet-number_skill" name="attr_basetext-investigation" value="PE + CH + IN" readonly />
-        </div>
-        <div>
-            <button class="sheet-skill_button" type='roll' name="attr_roll-lockpick" value='/em rolls Lockpick skill [[floor([[@{lockpick}]] + ?{modifier} - [[1d100]])]]' /></button>
-            <input type="text" class="sheet-text_skillname" value="Lockpick" readonly />
-            <input name="attr_tagskill21" value="1" type="checkbox">&nbsp;&nbsp;
-            <input type="number" class="sheet-number" name="attr_lockpick" value="@{mod-lockpick} + @{base-lockpick} + 20*@{tagskill21}+ @{temp-lockpick}" disabled="true"/>
-            <input type="number" class="sheet-number"name="attr_temp-lockpick" value="0" />
-            <input type="number" class="sheet-number"name="attr_mod-lockpick" value="0" />
-            <input type="number" class="sheet-number" name="attr_base-lockpick" value="5 + @{perception} + @{agility} + @{luck}" disabled="true" />
-            <input type="text" class="sheet-number_skill" name="attr_basetext-lockpick" value="5 + PE + AG" readonly />
         </div>
         <div>
             <button class="sheet-skill_button" type='roll' name="attr_roll-lore" value='/em rolls Lore skill [[floor([[@{lore}]] + ?{modifier} - [[1d100]])]]' /></button>
@@ -633,8 +623,6 @@
                 <div>
                     <input type="text" class="sheet-text_damage" value="Helmet" readonly />
                     <input type="text" class="sheet-number_formula" name="attr_helmet_name" />
-                    <input type="text" class="sheet-text_damage" value="AC" readonly style="width:15%"/>
-                    <input type="number" class="sheet-number" value="0"/>
                 </div>
                 <div>
                     <input type="text" class="sheet-text_damage" value="Ignored Hits" readonly style="width:30%"/>
