--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -556,25 +556,17 @@
 			<!--Condition Slots-->
 			<div class="crewConditionsWidget">
 				<div class="conditionsTitle">Conditions Slots</div>
-				<div class="conditionCheckbox conditionLineAugment">
-					<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceAugmentationSlot" value="1" />
-					<span class="inlinePips hexSelector"></span>
-				</div>
+				<input type="checkbox" class="hideCheckbox smallCheckbox conditionCheckbox conditionLineAugment" name="attr_resilienceAugmentationSlot" value="1" />
+				<span class="smallPips hexSelector conditionCheckbox conditionLineAugment"></span>
 				<div class="conditionType conditionLineAugment">Resilience[5](Augment)</div>
-				<div class="conditionCheckbox conditionLineResilience">
-					<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceSlot" value="1" checked="checked" disabled="disabled" />
-					<span class="inlinePips hexSelector"></span>
-				</div>
+				<input type="checkbox" class="hideCheckbox smallCheckbox conditionCheckbox conditionLineResilience" name="attr_resilienceSlot" value="1" checked="checked" disabled="disabled" />
+				<span class="smallPips hexSelector conditionCheckbox conditionLineResilience"></span>
 				<div class="conditionType conditionLineResilience">Resilience[5]</div>
-				<div class="conditionCheckbox conditionLineIntegrity">
-					<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_integritySlot" value="1" checked="checked" disabled="disabled" />
-					<span class="inlinePips hexSelector"></span>
-				</div>
+				<input type="checkbox" class="hideCheckbox smallCheckbox conditionCheckbox conditionLineIntegrity" name="attr_integritySlot" value="1" checked="checked" disabled="disabled" />
+				<span class="smallPips hexSelector conditionCheckbox conditionLineIntegrity"></span>
 				<div class="conditionType conditionLineIntegrity">Integrity[5]</div>
-				<div class="conditionCheckbox conditionLineVitality">
-					<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_vitalitySlot" value="1" checked="checked" disabled="disabled" />
-					<span class="inlinePips hexSelector"></span>
-				</div>
+				<input type="checkbox" class="hideCheckbox smallCheckbox conditionCheckbox conditionLineVitality" name="attr_vitalitySlot" value="1" checked="checked" disabled="disabled" />
+				<span class="smallPips hexSelector conditionCheckbox conditionLineVitality"></span>
 				<div class="conditionType conditionLineVitality">Vitality[5]</div>
 				<div class="crewConditions">
 					<input type="checkbox" class="resiliance-slot-2 hideCheckbox largeCheckbox" name="attr_resilienceAugmentationCondition" value="1" />
@@ -870,13 +862,12 @@
 			<!--EVA Suit-->
 			<div class="EVASuit">
 				<div class="EVATitle">EVA Suit</div>
+				<!--Ship Suit-->
 				<div class="EVAArmourTitle shipSuitTitle">Ship Suit</div>
-				<div class="shipSuit EVACheckbox">
-					<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_shipSuitBaseArmourSlot" value="1" checked="checked" disabled="disabled" />
-					<span class="inlinePips hexSelector"></span>
-				</div>
-				<div class="shipSuit EVAarmourType">
-					<select name="attr_ShipSuitSlot" class="most">
+				<input type="checkbox" class="hideCheckbox smallCheckbox shipSuit EVACheckbox" name="attr_shipSuitBaseArmourSlot" value="1" checked="checked" disabled="disabled" />
+				<span class="smallPips hexSelector shipSuit EVACheckbox"></span>
+				<div class="shipSuit EVAarmourType full">
+					<select name="attr_ShipSuitSlot">
 						<option></option>
 						<option>pathogen[3]</option>
 						<option>plasma[3]</option>
@@ -886,57 +877,64 @@
 						<option>combat[3]</option>
 					</select>
 				</div>
-				<div class="shipSuit EVAArmour"><input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_ShipSuitArmourCondition" value="1" /><span class="inlineArmour armour"></span></div>
-
+				<input type="checkbox" class="hideCheckbox mediumCheckbox shipSuit EVAArmour" name="attr_ShipSuitArmourCondition" value="1" />
+				<span class="mediumPips armour shipSuit EVAArmour"></span>
+				<!--Life Support Gel-->
 				<div class="EVAArmourTitle gelTitle">Life Support Gel</div>
 				<div class="gelFunction">Life Support:</div>
 				<div class="gelDetail">Provide Respirant</div>
 				<div class="gelDetail2">Low temp insulation</div>
-				<div class="gelBase EVACheckbox"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_LifeSupportBaseArmourSlot" checked="checked" value="1" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
-				<div class="gelBase EVAarmourType">
-					<select name="attr_LifeSupportGelBaseSlot" class="full">
+				<input type="checkbox" class="hideCheckbox smallCheckbox gelBase EVACheckbox" name="attr_LifeSupportBaseArmourSlot" checked="checked" value="1" disabled="disabled" />
+				<span class="smallPips hexSelector gelBase EVACheckbox"></span>
+				<div class="gelBase EVAarmourType full">
+					<select name="attr_LifeSupportGelBaseSlot">
 						<option></option>
 						<option>pathogen[3]</option>
 						<option>plasma[3]</option>
 						<option>radiation[3]</option>
 					</select>
 				</div>
-				<div class="EVAArmour gelBase"><input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_LifeSupportBaseArmourCondition" value="1" /><span class="inlineArmour armour"></span></div>
-
-				<div class="gelUpgrade EVACheckbox "><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_LifeSupportGelUpgradeArmourSlot" value="1" /><span class="inlinePips hexSelector"></span></div>
-				<div class="gelUpgrade EVAarmourType">
-					<select name="attr_LifeSupportGelUpgradeSlot" class="full">
+				<input type="checkbox" class="hideCheckbox mediumCheckbox EVAArmour gelBase" name="attr_LifeSupportBaseArmourCondition" value="1" />
+				<span class="mediumPips armour EVAArmour gelBase"></span>
+				<input type="checkbox" class="hideCheckbox smallCheckbox gelUpgrade EVACheckbox" name="attr_LifeSupportGelUpgradeArmourSlot" value="1" />
+				<span class="smallPips hexSelector gelUpgrade EVACheckbox"></span>
+				<div class="gelUpgrade EVAarmourType full">
+					<select name="attr_LifeSupportGelUpgradeSlot">
 						<option></option>
 						<option>pathogen[3]</option>
 						<option>plasma[3]</option>
 						<option>radiation[3]</option>
 					</select>
 				</div>
-				<div class="gelUpgrade EVAArmour"><input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_LifeSupportUpgradeArmourCondition" value="1" /><span class="inlineArmour armour"></span></div>
+				<input type="checkbox" class="hideCheckbox mediumCheckbox gelUpgrade EVAArmour" name="attr_LifeSupportUpgradeArmourCondition" value="1" />
+				<span class="mediumPips armour gelUpgrade EVAArmour"></span>
 				<div class="armourSubTitle gelSubTitle">Pathogen/Plasma/Radiation</div>
-
+				<!--Outer Shell-->
 				<div class="EVAArmourTitle outerTitle">Outer Shell</div>
-				<div class="outerBase EVACheckbox"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_OuterShellBaseArmourSlot" checked="checked" value="1" disabled="disabled" /><span class="inlinePips hexSelector"></span></div>
-				<div class="outerBase EVAarmourType">
-					<select name="attr_OuterShellBaseSlot" class="full">
+				<input type="checkbox" class="hideCheckbox smallCheckbox outerBase EVACheckbox" name="attr_OuterShellBaseArmourSlot" checked="checked" value="1" disabled="disabled" />
+				<span class="smallPips hexSelector outerBase EVACheckbox"></span>
+				<div class="outerBase EVAarmourType full">
+					<select name="attr_OuterShellBaseSlot">
 						<option></option>
 						<option>pressure[3]</option>
 						<option>caustics[3]</option>
 						<option>combat[3]</option>
 					</select>
 				</div>
-				<div class="outerBase EVAArmour"><input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_OuterShellBaseArmourCondition" value="1" /><span class="inlineArmour armour"></span></div>
-
-				<div class="outerUpgrade EVACheckbox"><input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_OuterShellUpgradeArmourSlot" value="1" /><span class="inlinePips hexSelector"></span></div>
-				<div class="outerUpgrade EVAarmourType">
-					<select name="attr_OuterShellUpgradeSlot" class="full">
+				<input type="checkbox" class="hideCheckbox mediumCheckbox outerBase EVAArmour" name="attr_OuterShellBaseArmourCondition" value="1" />
+				<span class="mediumPips armour outerBase EVAArmour"></span>
+				<input type="checkbox" class="hideCheckbox smallCheckbox outerUpgrade EVACheckbox" name="attr_OuterShellUpgradeArmourSlot" value="1" />
+				<span class="smallPips hexSelector outerUpgrade EVACheckbox"></span>
+				<div class="outerUpgrade EVAarmourType full">
+					<select name="attr_OuterShellUpgradeSlot">
 						<option></option>
 						<option>pressure[3]</option>
 						<option>caustics[3]</option>
 						<option>combat[3]</option>
 					</select>
 				</div>
-				<div class="outerUpgrade EVAArmour"><input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_OuterShellUpgradeArmourCondition" value="1" /><span class="inlineArmour armour"></span></div>
+				<input type="checkbox" class="hideCheckbox mediumCheckbox outerUpgrade EVAArmour" name="attr_OuterShellUpgradeArmourCondition" value="1" />
+				<span class="mediumPips armour outerUpgrade EVAArmour"></span>
 				<div class="armourSubTitle outerSubTitle">Combat/Caustics/Pressure</div>
 			</div>
 			<!-- Associations -->
@@ -1725,17 +1723,20 @@
 			<div class="basicModule module">
 				<div class="moduleTitle">Laboratories</div>
 				<div class="moduleDetail">Projects/Vignettes</div>
-				<div class="moduleListLabCheckbox1"> <input type="checkbox" name="attr_BioLabFittings" class="hideCheckbox inlineCheckbox" value="1" /><span class="inlinePips hexSelector"></span> </div>
+				<input type="checkbox" name="attr_BioLabFittings" class="hideCheckbox smallCheckbox moduleListLabCheckbox1" value="1" />
+				<span class="smallPips hexSelector moduleListLabCheckbox1"></span>
 				<div class="moduleListLabTitle1">BioLab Fittings</div>
 				<div class="moduleListCost1">1</div>
 				<div class="moduleListFitting1">BioTank</div>
 				<div class="moduleListPips1"><span class="inlinePips FittingD10"></span>&nbsp;&nbsp;&nbsp;<span class="inlinePips FittingD10"></span></div>
-				<div class="moduleListLabCheckbox2"><input type="checkbox" name="attr_advancedGravLab" class="hideCheckbox inlineCheckbox" value="1" /><span class="inlinePips hexSelector"></span></div>
+				<input type="checkbox" name="attr_advancedGravLab" class="hideCheckbox smallCheckbox moduleListLabCheckbox2" value="1" />
+				<span class="smallPips hexSelector moduleListLabCheckbox2"></span>
 				<div class="moduleListLabTitle2">GravLab Fittings</div>
 				<div class="moduleListCost3">1</div>
 				<div class="moduleListFitting3">Data core</div>
 				<div class="moduleListPips3"><span class="inlinePips FittingD10"></span>&nbsp;&nbsp;&nbsp;<span class="inlinePips FittingD10"></span></div>
-				<div class="moduleListLabCheckbox3"><input type="checkbox" name="attr_advancedMechLab" class="hideCheckbox inlineCheckbox" value="1" /><span class="inlinePips hexSelector"></span></div>
+				<input type="checkbox" name="attr_advancedMechLab" class="hideCheckbox smallCheckbox moduleListLabCheckbox3" value="1" />
+				<span class="smallPips hexSelector moduleListLabCheckbox3"></span>
 				<div class="moduleListLabTitle3">MechLab Fittings</div>
 				<div class="moduleListCost5">1</div>
 				<div class="moduleListFitting5">Suspension Bench</div>
@@ -1786,7 +1787,8 @@
 			</div>
 			<!--Brig-->
 			<div class="basicModule module">
-				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_brig" class="hideCheckbox inlineCheckbox" value="1" /><span class="inlinePips hexSelector"></span></div>
+				<input type="checkbox" name="attr_brig" class="hideCheckbox smallCheckbox moduleOptionalCheckbox" value="1" />
+				<span class="smallPips hexSelector moduleOptionalCheckbox"></span>
 				<div class="moduleOptionalTitle">Brig</div>
 				<div class="moduleDetail">Holding Cells</div>
 				<div class="moduleListTitle">Fittings</div>
@@ -1801,7 +1803,8 @@
 			</div>
 			<!--Compartments-->
 			<div class="basicModule module">
-				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_compartments" class="hideCheckbox inlineCheckbox" value="1" /><span class="inlinePips hexSelector"></span></div>
+				<input type="checkbox" name="attr_compartments" class="hideCheckbox smallCheckbox moduleOptionalCheckbox" value="1" />
+				<span class="smallPips hexSelector moduleOptionalCheckbox"></span>
 				<div class="moduleOptionalTitle"> Compartments</div>
 				<div class="moduleDetail">Concealed Hold [10t]</div>
 				<div class="moduleListTitle">Fittings</div>
@@ -1816,7 +1819,8 @@
 			</div>
 			<!--Ram-->
 			<div class="weaponModule module">
-				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_ram" class="hideCheckbox inlineCheckbox" value="1" /><span class="inlinePips hexSelector"></span></div>
+				<input type="checkbox" name="attr_ram" class="hideCheckbox smallCheckbox moduleOptionalCheckbox" value="1" />
+				<span class="smallPips hexSelector moduleOptionalCheckbox"></span>
 				<div class="moduleOptionalTitle">Ram</div>
 				<div class="moduleDetail">Breaching Lock</div>
 				<div class="moduleDamage">1</div>
@@ -1827,7 +1831,8 @@
 			</div>
 			<!--Launcher-->
 			<div class="weaponModule module">
-				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_launcher" class="hideCheckbox inlineCheckbox" value="1" /><span class="inlinePips hexSelector"></span></div>
+				<input type="checkbox" name="attr_launcher" class="hideCheckbox smallCheckbox moduleOptionalCheckbox" value="1" />
+				<span class="smallPips hexSelector moduleOptionalCheckbox"></span>
 				<div class="moduleOptionalTitle">Launcher</div>
 				<div class="moduleDetail">Projectiles</div>
 				<div class="moduleDamage">1</div>
