Sophont Log Complete
Finished version of the Sophont Log

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1956,7 +1956,7 @@
 				</div>
 			</div>
 		</div>
-		<!--      Ship Congiguration   -->
+		<!--Ship Congiguration-->
 		<div class="shipConfig">
 			<h2 class="subtitlesGrid ShipConfigTitle">Ship Configuration</h2>
 
@@ -3814,7 +3814,7 @@
 <div class="sheetType sophontSheet">
 	<div class="sophontSheetGrid">
 		<div class="topLineText">Alias:</div>
-		<div class="aliasThreatName"><input type="text" name="attr_name" class="" /></div>
+		<div class="aliasThreatName threatTextBox"><input type="text" name="attr_name" class="threatTextBox"/></div>
 		<div class="topLineText pronounThreat">Pronouns:</div>
 		<div class="pronounThreatName threatTextBox"><input type="text" name="attr_GenderIndentity" /></div>
 		<div class="sophontAspectColumnA">Concept:</div>
@@ -3887,22 +3887,20 @@
 		<div class="sophontAspectColumnA">Class:</div>
 		<div class="sophontTextColumnA threatTextBox"><input type="text" name="attr_class" /></div>
 		<div class="sophontAspectColumnB">Augments:</div>
-		<div class="sophontTextColumnB threatTextBox"><textarea name="attr_augments" class="threatTextBox"></textarea></div>
+		<div class="sophontTextColumnB threatTextBox sophontAugmentBox sophontAugmentList"><textarea name="attr_augments" class="threatTextBox sophontAugmentBox"></textarea></div>
 		<div class="sophontAspectColumnA">Archetype:</div>
 		<div class="sophontTextColumnA threatTextBox"><input type="text" name="attr_archetype" /></div>
 		<div class="sophontAspectColumnA">Tags:</div>
-		<div class="sophontTextColumnA threatTextBox"><textarea name="attr_tags" class="threatTextBox"></textarea></div>
-		<div class="sophontAspectColumnA">Notes:</div>
-		<div class="sophontTextColumnFull threatTextBox"><input type="text" name="attr_notes" /></div>
+		<div class="sophontTextColumnA threatTextBox sophontTagBox sophontTagList"><textarea name="attr_tags" class="threatTextBox sophontTagBox"></textarea></div>
+		<div class="sophontAspectColumnA sophontNotes">Notes:</div>
+		<div class="sophontTextColumnFull threatTextBox sophontNotes"><input type="text" name="attr_notes" /></div>
 		<!--Condition Slots-->
 		<div class="sophontConditionWidget">
 			<div class="sophontConditionTitle">Conditions Slots</div>
 			<!--Armour 1-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot1" value="1" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
-			<div class="sophontConditionText threatTextBox">
+			<input type="checkbox" class="hideCheckbox smallCheckbox sophontConditionCheckbox sophontCondition1" name="attr_armourSlot1" value="1" />
+			<span class="smallPips hexSelector sophontConditionCheckbox sophontCondition1"></span>
+			<div class="sophontConditionText threatTextBox sophontCondition1">
 				<select name="attr_sophontArmourSlot1">
 					<option></option>
 					<option>pathogen[3]</option>
@@ -3913,16 +3911,12 @@
 					<option>combat[3]</option>
 				</select>
 			</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition1" value="1" />
-				<span class="inlineArmour armour"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontConditionArmour sophontCondition1" name="attr_armourCondition1" value="1" />
+			<span class="largePips armour sophontConditionArmour sophontCondition1"></span>
 			<!--Armour 2-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot2" value="1" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
-			<div class="sophontConditionText threatTextBox">
+			<input type="checkbox" class="hideCheckbox smallCheckbox sophontConditionCheckbox sophontCondition2" name="attr_armourSlot2" value="1" />
+			<span class="smallPips hexSelector sophontConditionCheckbox sophontCondition2"></span>
+			<div class="sophontConditionText threatTextBox sophontCondition2">
 				<select name="attr_sophontArmourSlot2">
 					<option></option>
 					<option>pathogen[3]</option>
@@ -3933,16 +3927,12 @@
 					<option>combat[3]</option>
 				</select>
 			</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition2" value="1" />
-				<span class="inlineArmour armour"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontConditionArmour sophontCondition2" name="attr_armourCondition2" value="1" />
+			<span class="largePips armour sophontConditionArmour sophontCondition2"></span>
 			<!--Armour 3-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot3" value="1" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
-			<div class="sophontConditionText threatTextBox">
+			<input type="checkbox" class="hideCheckbox smallCheckbox sophontCondition3 sophontConditionCheckbox" name="attr_armourSlot3" value="1" />
+			<span class="smallPips hexSelector sophontConditionCheckbox sophontCondition3"></span>
+			<div class="sophontConditionText threatTextBox sophontCondition3">
 				<select name="attr_sophontArmourSlot3">
 					<option></option>
 					<option>pathogen[3]</option>
@@ -3953,16 +3943,12 @@
 					<option>combat[3]</option>
 				</select>
 			</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition3" value="1" />
-				<span class="inlineArmour armour"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition3 sophontConditionArmour" name="attr_armourCondition3" value="1" />
+			<span class="largePips armour sophontCondition3 sophontConditionArmour"></span>
 			<!--Armour 4-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot4" value="1" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
-			<div class="sophontConditionText threatTextBox">
+			<input type="checkbox" class="smallCheckbox hideCheckbox sophontCondition4 sophontConditionCheckbox" name="attr_armourSlot4" value="1" />
+			<span class="smallPips hexSelector sophontCondition4 sophontConditionCheckbox"></span>
+			<div class="sophontConditionText sophontCondition4 threatTextBox">
 				<select name="attr_sophontArmourSlot4">
 					<option></option>
 					<option>pathogen[3]</option>
@@ -3973,15 +3959,11 @@
 					<option>combat[3]</option>
 				</select>
 			</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition4" value="1" />
-				<span class="inlineArmour armour"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition4 sophontConditionArmour" name="attr_armourCondition4" value="1" />
+			<span class="largePips armour sophontCondition4 sophontConditionArmour"></span>
 			<!--Armour 5-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_armourSlot5" value="1" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox smallCheckbox sophontConditionCheckbox sophontCondition5" name="attr_armourSlot5" value="1" />
+			<span class="smallPips hexSelector sophontConditionCheckbox sophontCondition5"></span>
 			<div class="sophontConditionText threatTextBox">
 				<select name="attr_sophontArmourSlot5">
 					<option></option>
@@ -3993,50 +3975,33 @@
 					<option>combat[3]</option>
 				</select>
 			</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="hideCheckbox inlineCheckboxMedium" name="attr_armourCondition5" value="1" />
-				<span class="inlineArmour armour"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition5 sophontConditionArmour" name="attr_armourCondition5" value="1" />
+			<span class="largePips armour sophontCondition5 sophontConditionArmour"></span>
 			<!--Resilience 1-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceAugmentationSlot" value="1" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
-			<div class="sophontConditionText threatTextBox">Resilience[5]</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="hideCheckbox inlineCheckboxLarge" name="attr_resilienceAugmentationCondition" value="1" />
-				<span class="resiliance inlinePipsLarge"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox smallCheckbox sophontCondition6 sophontConditionCheckbox" name="attr_resilienceAugmentationSlot" value="1" />
+			<span class="smallPips hexSelector sophontCondition6 sophontConditionCheckbox"></span>
+			<div class="sophontConditionText threatTextBox sophontCondition6">Resilience[5]</div>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition6 sophontConditionArmour" name="attr_resilienceAugmentationCondition" value="1" />
+			<span class="resiliance largePips sophontCondition6 sophontConditionArmour"></span>
 			<!--Resilience 2-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_resilienceSlot" value="1" checked="checked" disabled="disabled" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
-			<div class="sophontConditionText threatTextBox">Resilience[5]</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="hideCheckbox inlineCheckboxLarge" name="attr_resilienceCondition" value="1" />
-				<span class="resiliance inlinePipsLarge"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox smallCheckbox sophontCondition7 sophontConditionCheckbox" name="attr_resilienceSlot" value="1" checked="checked" disabled="disabled" />
+			<span class="smallPips hexSelector sophontCondition7 sophontConditionCheckbox"></span>
+			<div class="sophontConditionText threatTextBox sophontCondition7">Resilience[5]</div>
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 sophontConditionArmour" name="attr_resilienceCondition" value="1" />
+			<span class="resiliance largePips sophontCondition7 sophontConditionArmour"></span>
 			<!--Integrity-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_integritySlot" value="1" checked="checked" disabled="disabled" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
-			<div class="sophontConditionText threatTextBox">Integrity[5]</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="integrity hideCheckbox inlineCheckboxLarge" name="attr_IntegrityCondition" value="1" />
-				<span class="crewIntegrity inlinePipsLarge"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox smallCheckbox sophontCondition8 sophontConditionCheckbox" name="attr_integritySlot" value="1" checked="checked" disabled="disabled" />
+			<span class="smallPips hexSelector sophontCondition8 sophontConditionCheckbox"></span>
+			<div class="sophontConditionText threatTextBox sophontCondition8">Integrity[5]</div>
+			<input type="checkbox" class="integrity hideCheckbox largeCheckbox sophontCondition8 sophontConditionArmour" name="attr_IntegrityCondition" value="1" />
+			<span class="crewIntegrity largePips sophontCondition8 sophontConditionArmour"></span>
 			<!--Vitality-->
-			<div class="sophontConditionCheckbox">
-				<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_vitalitySlot" value="1" checked="checked" disabled="disabled" />
-				<span class="inlinePips hexSelector"></span>
-			</div>
+			<input type="checkbox" class="hideCheckbox smallCheckbox sophontCondition9 sophontConditionCheckbox" name="attr_vitalitySlot" value="1" checked="checked" disabled="disabled" />
+			<span class="smallPips hexSelector sophontCondition9 sophontConditionCheckbox"></span>
 			<div class="sophontConditionText threatTextBox">Vitality[5]</div>
-			<div class="sophontConditionArmour">
-				<input type="checkbox" class="vital hideCheckbox inlineCheckboxLarge" name="attr_vitalityCondition" value="1" />
-				<span class="vital inlinePipsLarge"></span>
-			</div>
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontConditionArmour sophontCondition9" name="attr_vitalityCondition" value="1" />
+			<span class="vital largePips sophontConditionArmour sophontCondition9"></span>
+
 		</div>
 	</div>
 </div>
